# tap-zohosprints

./: .gitignore  README.md  item_detail.json  meltano.yml  pyproject.toml  tap-zohosprints.sh  tox.ini
.github/workflows/: ci.yml
docs/: tutorial.md
tap_zohosprints/: client.py  streams.py  tap.py
tap_zohosprints/schemas/: backlog.json  epic.json  item.json  log_hour.json  project.data  project.json  project_user.json  sprint.json  sprint_user.json  tag.json  team.json
tap_zohosprints/tests/: __init__.py  tag_property_unfurl.json  tag_property_unfurl_hasnodata.json  test_core.py
transform/: dbt_project.yml
transform/models/analytics/: analytics.yml  items.sql  project_items.sql
transform/models/stage/: sources.yml  stage.yml  stg_backlog.sql  stg_epic.sql  stg_item_details_backlog.sql  stg_item_details_sprint.sql  stg_project.sql  stg_sprint.sql  stg_sprint_user.sql  stg_tag.sql  stg_team.sql
transform/profile/: profiles.yml
