[tool.poetry]
name = "tap-zohosprints"
version = "0.0.2"
description = "`tap-zohosprints` is a Singer tap for ZohoSprints, built with the Meltano SDK for Singer Taps."
authors = ["AutoIDM"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zohosprints = 'tap_zohosprints.tap:TapZohoSprints.cli'
