[tool.poetry]
name = "tap-zohosprints"
version = "0.0.3"
description = "`tap-zohosprints` is a Singer tap for ZohoSprints, built with the Meltano SDK for Singer Taps."
authors = ["AutoIDM"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<=3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "0.3.17"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"
tox = "^3.23.1"
codecov = "^2.1.11"
pylint = "^2.11.1"
responses = "0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zohosprints = 'tap_zohosprints.tap:TapZohoSprints.cli'
